kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vprodb
  labels:
    app:  vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app:  vprodb
    spec:
      containers:
      - name:  vprodb
        image:  vprocontainers/vprofiledb
        resources:
        ports:
        - containerPort:  3306
          name:  vprodb-port
        volumeMounts:
        - name: vpro-db-data
          mountPath: /var/lib/mysql
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
