kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vprormq
  type: ClusterIP
  ports:
  -  protocol: TCP
     port: 5672
     targetPort: vpromrq-port
